--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,17 @@
 http:
-  listen-address: 0.0.0.0:8081
+  listen-address: 0.0.0.0:8080
 neo4j:
  # endpoint: "neo4j+s://bd75ff33.databases.neo4j.io"
   endpoint: "neo4j://127.0.0.1"
   plaintext: true
+  retry:
+    interval: 1000 #interval between each request in ms
+    max:  5 #max number of retries before aborting
+    timeout: 25000 #timeout ms
+  pools:
+    timeout: 5000
+    max-pool-size: 100
+    acq-timeout: 10000
+
   #username: "neo4j"
   #password: "KZ02v5sH02S4Ha5ZjviVfI9sfSlEQEMtXtkQCOMecfs"
