--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,9 @@ on:
      - master
      - develop
      - release/v*.*.*
-
+permissions:
+  contents: read
+  pull-requests: read
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -25,10 +27,10 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        go-version: 1.18.4
 
     - name: Build
-      run: make
+      run: make build
 
     - name: Test
       uses: make test
