--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,20 +20,19 @@ permissions:
   pull-requests: read
 jobs:
   test:
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18.4
+      - run: go version
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.18.4
+      - name: Build
+        run: make build
 
-    - name: Build
-      run: make build
-
-    - name: Test
-      uses: make test
-
-
-    
+      - name: Test
+        uses: make test
