--- a/.github/workflows/golangcilint.yaml
+++ b/.github/workflows/golangcilint.yaml
@@ -23,10 +23,12 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
+      - name: setup go
+        uses: actions/setup-go@v3
         with:
           go-version: 1.18.4
-      - uses: actions/checkout@v3
+      - name: checkout repo
+        uses: actions/checkout@v3
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
