--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: "Unit Test"
+name: Unit Tests
 on:
   push:
     tags:
@@ -29,9 +29,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.18.4
-
       - name: Build
         run: make build
-
       - name: Test
-        uses: make test
+        run: make test
