--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -23,16 +23,8 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v2
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v2
-#      -
-#        name: Login to DockerHub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: checkout
+        uses: actions/checkout@v3
       - name: Build
         run: docker build -t music-match:test .
       - name: Cleanup
