--- a/.github/workflows/golangcilint.yaml
+++ b/.github/workflows/golangcilint.yaml
@@ -30,10 +30,4 @@ jobs:
       - name: checkout repo
         uses: actions/checkout@v3
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: v1.46.2
-          only-new-issues: true
-          skip-cache: true
-          skip-pkg-cache: true
-          skip-build-cache: true
+        run: make lint
