add support for JWT auth

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 http:
   listen-address: 0.0.0.0:8080
+  secret: music-match2022!
 neo4j:
   endpoint: "neo4j+s://01f4c3bc.databases.neo4j.io"
   plaintext: false
